tests/lenient/tests/ui/fail-lenient/missing_reason_error.stderr
error: Citation requires documentation but no annotation provided. Add a 'reason = "..."' attribute or enable the annotationless feature
 --> tests/ui/fail-lenient/missing_reason_error.rs:5:1
  |
5 | #[cite(mock, same = "content", level = "ERROR")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `cite` (in Nightly builds, run with -Z macro-backtrace for more info)
